# audio2biosignal

./: .gitignore  README.md  optimizerbuilder_raw_response.txt  optimizerbuilder_test_cases.json  pyproject.toml
adw/: add_architecture.py  create_config.py  create_test_cases.py  create_tests.py  create_unit_tests.py  run_except_loop.py
configs/: SingleEpochTestConfig.yml  big-wavenet-pmemo_20250311_114310.yml  example1.yml  example2.yml  example3.yml  residual_upsampler_invalid.yml  residual_upsampler_large.yml  residual_upsampler_small.yml  tiny-tcn-pmemo_20250304_182300.yml
scripts/: hku_metadata_file.py  pmemo_metadata_file.py  train_audio2eda.py  write_unit_tests.sh
specs/: __audio2biosignal-v0-3-trainer.md  audio2biosignal-implement-ignored.md  audio2biosignal-v0-1-complete.md  audio2biosignal-v0-2-tests.md  audio2biosignal-v0-2-trainer.md  audio2biosignal-v0-3-checkpointing.md  audio2biosignal-v0-3-trainer.md  audio2biosignal-v0-complete.md  audio2biosignal-v0-trainer.md  audio2biosignal-v0.md  create_unit_tests.md  downsampler.md  run_except_loop.md  upsampler.md  wavenet.md
specs/test_writing/: generate-test-cases-guide.md  generate-test-cases.md  generate-tests.md  implement_test_cases.md
src/: configs.py  loss.py  metrics.py  optimizer.py  train.py  utilities.py
src/architectures/: configs.py  residual_upsampler.py
src/data/: audio_preprocessing.py  configs.py  dataloader.py  eda_preprocessing.py  preprocessing.py
src/models/: base.py  configs.py  registry.py  residual_upsampler.py  tcn.py  wavenet.py
tests/unit/: test_configs.py  test_loss.py  (+2 more)
(+17 files in other folders)
